<resources>
    <string name="app_name">PicShape</string>

    <string name="welcome_text">Welcome to PicShape !</string>
    <string name="parameters_text">Parameters</string>
    <string name="mode_text">Mode</string>
    <string name="iteration_text">Iteration</string>
    <string name="format_text">Format</string>
    <string name="select_text">Select a picture</string>
    <string name="send_text">Send</string>
    <string name="next_text">Next</string>
    <string name="title_activity_settings">Settings</string>
    <string name="begin_select_text">To begin select a Picture</string>
    <string name="touch_change_text">Touch picture to change</string>

    <string name="modify_text">Modify</string>
    <string name="delete_text">Delete</string>
    <string name="forgot_password_text">Forgot your password?</string>

    <!-- Sign strings -->
    <string name="signin_text">Sign In</string>
    <string name="signup_text">Sign Up</string>

    <string name="mail_text">Email address</string>
    <string name="pseudo_text">Pseudo</string>
    <string name="password_text">Password</string>
    <string name="new_account_text">New Account</string>
    <string name="submit_text">Submit</string>

    <!-- Result -->
    <string name="result_text">What a result</string>
    <string name="touch_original_text">Touch to see original</string>

    <string name="action_logoff">Log off</string>

    <string name="action_account">Account</string>

    <!-- Strings related to Settings -->
    <string name="action_settings">Settings</string>


    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>


    <!-- Label for the url preference [CHAR LIMIT=30] -->
    <string name="pref_url_label">URL du WebService</string>
    <!-- Key name for storing url in SharedPreferences -->
    <string name="pref_url_key" translatable="false">url</string>
    <!-- Default webservice url for url preference -->
    <string name="pref_url_default" translatable="false">https://picshape-engine-develop.herokuapp.com</string>

    <!-- <string name="pref_url_default" translatable="false">http://192.168.0.15:8080</string> -->

</resources>
