<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.picshape.view.SignUpFragment"
    >


    <ImageView
        android:id="@+id/background_imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/back_welcome_picshape"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_above="@id/signin_form_layout">

        <ImageView
            android:id="@+id/logo_imageView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/logo2"/>

        <TextView
            android:id="@+id/picshape_textView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/logo_imageView"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="24sp"
            android:textColor="@android:color/white"
            android:textAllCaps="true"
            android:text="@string/app_name"/>

    </RelativeLayout>



    <LinearLayout
        android:id="@+id/signin_form_layout"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:background="#5111"
        android:orientation="vertical"
        android:layout_above="@+id/submit_btn">

        <TextView
            android:id="@+id/pseudo_textView"
            android:text="@string/pseudo_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="16sp"
            android:textColor="@android:color/white"
         />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:hint="Pichshape"
            android:ems="10"
            android:id="@+id/pseudo_editText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/mail_text"/>

        <EditText
            android:id="@+id/email_editText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:hint="mail@picshape.com" />

        <TextView
            android:text="@string/password_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:id="@+id/password_textView" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:hint="password"
            android:ems="10"
            android:id="@+id/password_editText"
            />


    </LinearLayout>




    <Button
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button"
        android:textSize="16sp"
        android:text="@string/submit_text"
        android:textColor="@android:color/white"
        />

</RelativeLayout>