<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.example.android.picshape.view.TakePicFragment"
    android:background="@color/primary">




    <RelativeLayout
        android:id="@+id/welcome_relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="visible">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/back_welcome_picshape"/>

        <ImageView
            android:id="@+id/logo_imageView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_centerVertical="true"
            android:src="@drawable/logo2"/>

        <TextView
            android:id="@+id/name_app_textView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/logo_imageView"
            android:gravity="center_horizontal|center_vertical"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@android:color/white"
            android:text="@string/app_name"/>

        <Button
            android:id="@+id/select_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/name_app_textView"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:text="@string/select_text"
            />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/pic_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="@android:color/white"
        android:visibility="gone">
        <ImageView
            android:id="@+id/pic_imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="Picture choosen"
            android:padding="20dp"
            android:src="@drawable/pictoshape_min"
            android:visibility="visible"
            />

    </RelativeLayout>





    <Button
        android:id="@+id/next_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button"
        android:textSize="18sp"
        android:text="@string/next_text"
        android:textColor="@android:color/white"
        android:visibility="gone"/>


</LinearLayout>